--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=9000
-spring.datasource.url=jdbc:mysql://localhost:3306/footballplayers
+spring.datasource.url=jdbc:mysql://192.168.15.120:3306/footballplayers
 spring.datasource.username=prasanth
 spring.datasource.password=P@ssw0rd
 
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
